@@ -33,3 +33,4 @@ editorTitle=FireGPG's editor.
 editorDescription=Here you can edit and perform some operations on a text.
 whatIsNewTitle=What is new ?
 whatIsNewDescription=News of FireGPG :\n(An anonymous ping has been send to FireGPG's team for stats.)
+newVersionAlert=A new version of FireGPG is avaliable, would you like to update now ?
