@@ -33,3 +33,4 @@ editorTitle=Editeur de FireGPG.
 editorDescription=Vous pouvez ici traiter un texte.
 whatIsNewTitle=Nouveautés de FireGPG
 whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) :\n(Un ping anonyme à été envoyé à l'équipe de FireGPG pour des statisiques)
+newVersionAlert=Une nouvelle version de FireGPG est disponible, voulez-vous effectuer la mise à jour maintenant ?
